avances front casi terminado

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -15,7 +15,7 @@
 <body>
   <header> 
     <h1>El Nexo Digital</h1>
-    <h4>Aquí podrás contar con una comunidad inmensa de opinólogos sobre videojuegos, anime, películas y series, y otras cositas. Además, podrás crear tu propia biblioteca y ayudar a los demas puntuando tus juegos y metrajes favoritos!.</h4>
+    <h4>Aquí podrás contar con una comunidad inmensa de opinólogos sobre videojuegos, animé, películas y series, y otras cositas. Además, podrás crear tu propia biblioteca y ayudar a los demas puntuando tus juegos y metrajes favoritos!.</h4>
   </header>
 
   <nav>
@@ -105,6 +105,11 @@
             <label for="game-name">Nombre del Videojuego:</label>
             <input type="text" id="game-name" name="game-name" placeholder="Ej: The Last of Us" required>
           </div>
+
+       <div class="form-group">
+  <label for="imagen-url">URL de la Imagen (opcional):</label>
+  <input type="url" id="imagen-url" name="imagen-url" placeholder="Ej: https://ejemplo.com/portada.jpg">
+</div>
 
           <div class="form-group">
             <label for="game-category">Categoría:</label>
@@ -200,6 +205,11 @@
             <input type="text" id="anime-name" name="anime-name" placeholder="Ej: Naruto" required>
           </div>
 
+         <div class="form-group">
+  <label for="imagen-url">URL de la Imagen (opcional):</label>
+  <input type="url" id="imagen-url" name="imagen-url" placeholder="Ej: https://ejemplo.com/portada.jpg">
+</div>
+
           <div class="form-group">
             <label for="anime-category">Categoría:</label>
             <select id="anime-category" name="anime-category" required>
@@ -229,10 +239,10 @@
             </div>
           </div>
 
-          <div class="form-group">
-            <label for="review-text">Tu Reseña:</label>
-            <textarea id="review-text" name="review-text" rows="5" placeholder="Comparte tu opinión sobre el anime..." required></textarea>
-          </div>
+         <div class="form-group">
+  <label for="imagen-url">URL de la Imagen (opcional):</label>
+  <input type="url" id="imagen-url" name="imagen-url" placeholder="Ej: https://ejemplo.com/portada.jpg">
+</div>
 
           <button type="submit" class="btn btn-submit">Publicar Reseña</button>
         </form>
@@ -294,6 +304,11 @@
             <label for="movie-name">Nombre de la película:</label>
             <input type="text" id="movie-name" name="movie-name" placeholder="Ej: Rapidos y Furiosos" required>
           </div>
+
+       <div class="form-group">
+  <label for="imagen-url">URL de la Imagen (opcional):</label>
+  <input type="url" id="imagen-url" name="imagen-url" placeholder="Ej: https://ejemplo.com/portada.jpg">
+</div>
 
           <div class="form-group">
             <label for="movie-category">Categoría:</label>
@@ -388,6 +403,11 @@
             <label for="serie-name">Nombre de la serie:</label>
             <input type="text" id="serie-name" name="serie-name" placeholder="Ej: Dexter" required>
           </div>
+
+       <div class="form-group">
+  <label for="imagen-url">URL de la Imagen (opcional):</label>
+  <input type="url" id="imagen-url" name="imagen-url" placeholder="Ej: https://ejemplo.com/portada.jpg">
+</div>
 
           <div class="form-group">
             <label for="serie-category">Categoría:</label>
